ingress/k8-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
    rules:
    -  host: dashboard.com
       http:
         paths:
         -  pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
